--- a/index.html
+++ b/index.html
@@ -8,33 +8,33 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap"
       rel="stylesheet"
     />
-    <!-- Open Sans einfügen -->
+    
     <style>
       body {
-        font-family: "Open Sans", sans-serif; /* Open Sans Schriftart */
+        font-family: "Open Sans", sans-serif; 
         background-color: #f0f0f0;
         display: flex;
         justify-content: center;
         align-items: flex-start;
         height: 100vh;
         margin: 0;
-        padding-top: 3mm; /* Abstand von oben */
+        padding-top: 3mm;
       }
       .contact-container {
-        background-color: #ffffff; /* Hintergrundfarbe */
+        background-color: #ffffff; 
         padding: 10px;
         border-radius: 8px;
-        width: 100%; /* 100% der Breite des Bildschirms */
-        max-width: 350px; /* Maximale Breite, um auf jedem Gerät gut auszusehen */
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sanfter Schatten */
+        width: 100%; 
+        max-width: 350px; 
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
       }
       .contact-item {
         display: flex;
         align-items: center;
         margin-bottom: 10px;
         padding: 12px;
-        padding-left: 5mm; /* 5mm Abstand links */
-        padding-right: 5mm; /* 5mm Abstand rechts */
+        padding-left: 5mm; 
+        padding-right: 5mm; 
         border-radius: 8px;
         font-size: 18px;
         font-weight: bold;
@@ -42,15 +42,15 @@
         width: 100%;
         height: 60px;
         box-sizing: border-box;
-        transition: opacity 0.1s ease-in-out; /* Sanfter Übergang bei Hover */
-        text-decoration: none; /* Keine Unterstreichung für Links */
+        transition: opacity 0.1s ease-in-out; 
+        text-decoration: none; 
       }
       .contact-item:hover {
-        opacity: 0.8; /* Leichte Transparenz beim Hover */
+        opacity: 0.8; 
         box-shadow: 0 0 0 3px #000;
       }
       .contact-item img {
-        margin-right: 5mm; /* 5mm Abstand zum Text */
+        margin-right: 5mm; 
         height: 40px;
         width: 40px;
      
