--- a/index.html
+++ b/index.html
@@ -18,15 +18,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>baers-first-dupe</title>
+    <!-- Please choose a different title -->
+    <title></title>
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap"
       rel="stylesheet"
     />
-    
+
     <style>
       body {
-        font-family: "Open Sans", sans-serif; 
+        font-family: "Open Sans", sans-serif;
         background-color: #f0f0f0;
         display: flex;
         justify-content: center;
@@ -36,20 +37,20 @@
         padding-top: 3mm;
       }
       .contact-container {
-        background-color: #ffffff; 
+        background-color: #ffffff;
         padding: 10px;
         border-radius: 8px;
-        width: 100%; 
-        max-width: 350px; 
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+        width: 100%;
+        max-width: 350px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       }
       .contact-item {
         display: flex;
         align-items: center;
         margin-bottom: 10px;
         padding: 12px;
-        padding-left: 5mm; 
-        padding-right: 5mm; 
+        padding-left: 5mm;
+        padding-right: 5mm;
         border-radius: 8px;
         font-size: 18px;
         font-weight: bold;
@@ -57,18 +58,17 @@
         width: 100%;
         height: 60px;
         box-sizing: border-box;
-        transition: opacity 0.1s ease-in-out; 
-        text-decoration: none; 
+        transition: opacity 0.1s ease-in-out;
+        text-decoration: none;
       }
       .contact-item:hover {
-        opacity: 0.8; 
+        opacity: 0.8;
         box-shadow: 0 0 0 3px #000;
       }
       .contact-item img {
-        margin-right: 5mm; 
+        margin-right: 5mm;
         height: 40px;
         width: 40px;
-     
       }
       .ytsus {
         background-color: #bb2d2d;
@@ -85,22 +85,14 @@
         <img src="img/youtube-black.svg" alt="youtube" />
         <span>YouTube<br />redshell.</span>
       </a>
-      <a
-        href="sus-insta-vids.html"
-        class="contact-item ytsus"
-        target="_blank"
-      >
+      <a href="sus-insta-vids.html" class="contact-item ytsus" target="_blank">
         <img src="img/sussy-sussy.png" alt="sus-videos" />
         <span>SUS-Videos<br />sus-insta-vids.html</span>
       </a>
-      <a
-        href="never-use"
-        class="contact-item ytsus"
-        target="_blank"
-      >
+      <a href="never-use" class="contact-item ytsus" target="_blank">
         <img src="img/sussy-sussy.png" alt="never-use" />
         <span>never-use<br />neveruse.md</span>
       </a>
-      </a>
     </div>
   </body>
+</html>
