Fix license header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     A copy of the GNU General Public License should be hosted along with
     this website (LICENSE). If not, see <https://www.gnu.org/licenses/>.
 
-    bvvitus_@outlook.com
+    bvvitus@outlook.com
 -->
 
 <!DOCTYPE html>
